# compressed-suffix-tree

./: CMakeLists.txt  README.md
include/: CompressedSuffixTree.hpp  SuffixTree.hpp
test/: CompressedSuffixTreeTest.cpp  SuffixTreeTest.cpp
